Adding virtual fixtures project

--- a/projects/processing-sketches.html
+++ b/projects/processing-sketches.html
@@ -29,6 +29,7 @@
         </div>
         <button class="dropdown-btn nav-option">projects</button>
         <div class="dropdown-container">
+          <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
           <a class="nav-option" href="linecollection.html">line<br/>collection</a>
           <a class="nav-option" href="lifesimulator.html">life<br/>simulator</a>
           <a class="nav-option" href="processing-sketches.html">processing<br/>sketches</a>
@@ -57,6 +58,7 @@
           </div>
           <button class="dropdown-btn nav-option">projects</button>
           <div class="dropdown-container">
+            <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
             <a class="nav-option" href="linecollection.html">line collection</a>
             <a class="nav-option" href="lifesimulator.html">life simulator</a>
             <a class="nav-option" href="processing-sketches.html">processing sketches</a>
