--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
-  <body style="overflow-x: hidden; overflow-y: scroll !important; width: 100vw; white-space: normal; height: 100vh;">
+  <body class=scroll-vertical>
     <div class="sidenav-wrapper">
       <a class="nav-option title" href="index.html">Wesley<br/>Klein</a>
       <nav class="sidenav">
@@ -29,6 +29,7 @@
         </div>
         <button class="dropdown-btn nav-option">projects</button>
         <div class="dropdown-container">
+          <a class="nav-option" href="projects/virtual-fixtures.html">virtual<br/>fixtures</a>
           <a class="nav-option" href="projects/linecollection.html">line collection</a>
           <a class="nav-option" href="projects/lifesimulator.html">life simulator</a>
           <a class="nav-option" href="projects/processing-sketches.html">processing sketches</a>
@@ -57,6 +58,7 @@
           </div>
           <button class="dropdown-btn nav-option">projects</button>
           <div class="dropdown-container">
+            <a class="nav-option" href="projects/virtual-fixtures.html">virtual<br/>fixtures</a>
             <a class="nav-option" href="projects/linecollection.html">line<br/>collection</a>
             <a class="nav-option" href="projects/lifesimulator.html">life<br/>simulator</a>
             <a class="nav-option" href="projects/processing-sketches.html">processing<br/>sketches</a>
