New homepage background

--- a/blog.html
+++ b/blog.html
@@ -72,9 +72,9 @@
     <main role="main">
       <div class="blog-container">
         <div class="blog-entry">
-          <h1>Under Construction</h1>
-          <h2>February 12, 2018</h2>
-          <p>Coming Soon!</p>
+          <h1>Plans</h1>
+          <h2>February 17, 2018</h2>
+          <p>I have always been interested in leanr</p>
         </div>
   
       </div>
