added processing sketches

--- a/projects/processing-sketches.html
+++ b/projects/processing-sketches.html
@@ -70,8 +70,48 @@
     </div>
 
     <main role="main">
-      <div class="sketch-container">
-          <iframe src="https://editor.p5js.org/chachoblow/embed/rye6tR-dX" frameborder="0"></iframe>
+      <div class="link-container">
+        <ul>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/Hkf4Syku7">exploding balls</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/SyzxGGkd7">clicked fireworks</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/Bk4yWwkOm">bobbing ocean</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/HJ6O_1WO7">random chords, many circles</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/rJt59ZZuX">suns colliding</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/rkUBxdZ_Q">pointillism</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/rye6tR-dX">criss-cross gradient</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/SkziiCE_7">row color cirlces</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/Hkz8pREO7">row color circles, row and columns</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/r1ikVXd_m">ghost webcam</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/H1J63H9dX">make your own shape</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/v2e6Y4WyW">game of life</a>
+          </li>
+          <li>
+              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/AEuGouJYL">dynamic collage</a>
+          </li>
+        </ul>
       </div>
     </main>
   </body>
