Changed blog post.

--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
         <div class="blog-entry">
           <h1>Plans</h1>
           <h2>February 17, 2018</h2>
-          <p>I have always been interested in leanr</p>
+          <p>This blog will be where I host my ideas, project walk-throughs, processes, inspirations, and maybe sometimes, rants. I have been concentrating on getting the other parts of my website established before making any posts here. Luckily, I feel content with the rest of my website now, so this should happen soon. See you then!</p>
         </div>
   
       </div>
