--- a/artwork/photo.html
+++ b/artwork/photo.html
@@ -30,6 +30,7 @@
         <button class="dropdown-btn nav-option">projects</button>
         <div class="dropdown-container">
           <a class="nav-option" href="../projects/virtual-fixtures.html">virtual<br/>fixtures</a>  
+          <a class="nav-option" href="../projects/neo.html">find neo</a>
           <a class="nav-option" href="../projects/linecollection.html">line<br/>collection</a>
           <a class="nav-option" href="../projects/lifesimulator.html">life<br/>simulator</a>
           <a class="nav-option" href="../projects/processing-sketches.html">processing<br/>sketches</a>
@@ -59,6 +60,7 @@
           <button class="dropdown-btn nav-option">projects</button>
           <div class="dropdown-container">
             <a class="nav-option" href="../projects/virtual-fixtures.html">virtual<br/>fixtures</a>  
+            <a class="nav-option" href="../projects/neo.html">find neo</a>
             <a class="nav-option" href="../projects/linecollection.html">line collection</a>
             <a class="nav-option" href="../projects/lifesimulator.html">life simulator</a>
             <a class="nav-option" href="../projects/processing-sketches.html">processing sketches</a>
