--- a/projects/lifesimulator.html
+++ b/projects/lifesimulator.html
@@ -24,12 +24,13 @@
             <a class="nav-option" href="../artwork/branches.html">branches</a>
           </div>
           <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-          <a class="nav-option" href="../artwork/animations">animations</a>
+          <a class="nav-option" href="../artwork/animations.html">animations</a>
           <a class="nav-option" href="../artwork/photo.html">photo</a>
         </div>
         <button class="dropdown-btn nav-option">projects</button>
         <div class="dropdown-container">
           <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
+          <a class="nav-option" href="neo.html">find neo</a>
           <a class="nav-option" href="linecollection.html">line<br/>collection</a>
           <a class="nav-option" href="lifesimulator.html">life<br/>simulator</a>
           <a class="nav-option" href="processing-sketches.html">processing<br/>sketches</a>
@@ -59,6 +60,7 @@
           <button class="dropdown-btn nav-option">projects</button>
           <div class="dropdown-container">
             <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
+            <a class="nav-option" href="neo.html">find neo</a>
             <a class="nav-option" href="linecollection.html">line collection</a>
             <a class="nav-option" href="lifesimulator.html">life simulator</a>
             <a class="nav-option" href="processing-sketches.html">processing sketches</a>
