Homepage is basically done, now adding project pages. Mobile is also done for the homepage.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/pixel-me.png">
     <link rel="stylesheet" href="style-brutal.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200i,300,300i,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400,500,700|Roboto:100,300,400,500,700,900" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
@@ -19,76 +19,36 @@
       <a class="nav-option" href="about.html">about</a>
 
       <div class="vertical-menu-info">
-        <h1 class="stretch">wesley klein</h1>
-        <h2 class="stretch">write code | make art | build stuff</h2>
+        <h1 class="stretch">wesley klein.</h1>
+        <h2 class="stretch">write code | build stuff | make art</h2>
       </div>
     </header>
 
     <main>
       <nav>
         <ul>
+          <li class="nav-heading">Artwork</li>
           <li>
-            <a class="nav-option" href="artwork/cyclux.html">
-              comics
-              <div class="nav-image-container">
-                <img class="nav-image" src="images/comics/cyclux/spread-1-1000.jpg"
-                  alt="First page of the comic 'cyclux'.">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/comics/branches/branches-page06.png')" onmouseout="whiteBackground()" class="nav-option" href="artwork/cyclux.html">comics</a>
           </li>
           <li>
-            <a class="nav-option" href="artwork/illustrations.html">
-              illustrations
-              <div class="nav-image-container">
-                <img class="responsive-image" src="../images/illustrations/fried-1381h.jpg" 
-                  alt="Illustration of an older man taking a selfie.">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/illustrations/can-you-hear-me-1800h.jpg')" onmouseout="whiteBackground()" class="nav-option" href="artwork/illustrations.html">illustrations</a>
           </li>
           <li>
-            <a class="nav-option" href="artwork/animations.html">
-              animations
-              <div class="nav-image-container">
-                <img class="nav-image" src="images/menu/animation-have-you.gif"
-                  alt="GIF of the line collection application.">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/menu/animation-have-you.gif')" onmouseout="whiteBackground()" class="nav-option" href="artwork/animations.html">animations</a>
           </li>
           <li>
-            <a class="nav-option" href="artwork/photo.html">
-              photo
-              <div class="nav-image-container">
-                <img class="nav-image" src="images/photographs/brittany-driving-1000h.JPG" 
-                  alt="Photograph of a woman driving on a highway.">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/photographs/megan-dad-2-1000h.JPG')" onmouseout="whiteBackground()" class="nav-option" href="artwork/photo.html">photo</a>
+          </li>
+          <li class="nav-heading">Code</li>
+          <li>
+            <a onmouseover="changeBackground('images/virtual-fixtures/game-switch-worlds.gif')" onmouseout="whiteBackground()" class="nav-option" href="projects/virtual-fixtures.html">virtual fixtures</a>
           </li>
           <li>
-            <a class="nav-option" href="projects/virtual-fixtures.html">
-              virtual fixtures
-              <div class="nav-image-container">
-                  <img class="nav-image" src="images/virtual-fixtures/game-switch-worlds.gif" 
-                    alt="Gif of switching worlds in Virtual Fixtures" title="World switching in Virtual Fixtures">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/neo/neo-action.gif')" onmouseout="whiteBackground()" class="nav-option" href="projects/neo.html">find neo</a>
           </li>
           <li>
-            <a class="nav-option" href="projects/neo.html">
-              find neo
-              <div class="nav-image-container">
-                  <img class="project-media" src="images/neo/neo-action.gif" 
-                    alt="The app being used" title="NEO app being used.">es">
-              </div>
-            </a>
-          </li>
-          <li>
-            <a class="nav-option" href="projects/linecollection.html">
-              line collection
-              <div class="nav-image-container">
-                <img class="nav-image" src="images/menu/line-collection.gif"
-                  alt="GIF of the line collection application.">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/menu/line-collection.gif')" onmouseout="whiteBackground()" class="nav-option" href="projects/linecollection.html">line collection</a>
           </li>
           <!--
           <li>
@@ -96,13 +56,7 @@
           </li>
           -->
           <li>
-            <a class="nav-option" href="projects/processing-sketches.html">
-              processing sketches
-              <div class="nav-image-container">
-                <img class="nav-image" src="images/menu/game-of-life.gif"
-                  alt="GIF of the line collection application.">
-              </div>
-            </a>
+            <a onmouseover="changeBackground('images/menu/game-of-life.gif')" onmouseout="whiteBackground()" class="nav-option" href="projects/processing-sketches.html">processing sketches</a>
           </li>
         </ul>
       </nav>
