--- a/projects/neo.html
+++ b/projects/neo.html
@@ -6,72 +6,24 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="images/pixel-me.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="../images/pixel-me.png">
+    <link rel="stylesheet" href="../style-brutal.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400,500,700|Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
-  <body class="scroll-vertical">
-    <div class="sidenav-wrapper">
-      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
-      <nav class="sidenav">
-        <button class="dropdown-btn nav-option">artwork</button>
-        <div class="dropdown-container clicked">
-          <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../artwork/cyclux.html">cyclux</a>
-            <a class="nav-option" href="../artwork/branches.html">branches</a>
-          </div>
-          <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-          <a class="nav-option" href="../artwork/animations.html">animations</a>
-          <a class="nav-option" href="../artwork/photo.html">photo</a>
-        </div>
-        <button class="dropdown-btn nav-option">projects</button>
-        <div class="dropdown-container">
-          <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
-          <a class="nav-option" href="neo.html">find neo</a>
-          <a class="nav-option" href="linecollection.html">line<br/>collection</a>
-          <a class="nav-option" href="lifesimulator.html">life<br/>simulator</a>
-          <a class="nav-option" href="processing-sketches.html">processing<br/>sketches</a>
-        </div>
-        <a class="nav-option" href="../blog.html">blog</a>
-        <a class="nav-option" href="../about-me.html">about</a>
-      </nav>
-      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-    </div>
+  <body>
 
-    <div class="topnav-wrapper">
-      <nav class="topnav">
-        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
-        <div class="dropdown-container main-dropdown">
-          <button class="dropdown-btn nav-option">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="../artwork/cyclux.html">cyclux</a>
-              <a class="nav-option" href="../artwork/branches.html">branches</a>
-            </div>
-            <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-            <a class="nav-option" href="../artwork/animations.html">animations</a>
-            <a class="nav-option" href="../artwork/photo.html">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
-            <a class="nav-option" href="neo.html">find neo</a>
-            <a class="nav-option" href="linecollection.html">line collection</a>
-            <a class="nav-option" href="lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="processing-sketches.html">processing sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html">blog</a>
-          <a class="nav-option" href="../about-me.html">about</a>
-        </div>
-      </nav>
-    </div>
+    <header>
+      <a class="nav-option" href="../index.html">back</a>
 
-    <main role="main">
+      <div class="vertical-menu-info">
+        <h1 class="stretch">find neo.</h1>
+        <h2 class="stretch">NASA Open API | Near Earth Object Web Service | JavaScript</h2>
+      </div>
+    </header>
+
+    <main>
       <div class="project-container">
         <h1>Find Near-Earth Objects (NEO)</h1>
         <p>This application allows you to search for near-Earth objects on a specific day. It uses the NeoWs (<a href="https://api.nasa.gov/api.html#NeoWS" title="Page for the NeoWs API)" target="_blank">Near Earth Object Web Service</a>) to access the data about all near-Earth objects on the desired day. A GIF of the application can be seen below. You can try it for yourself <a href="../neo-app.html" title="The NEO application">here</a>.</p>
@@ -79,5 +31,8 @@
       </div>
     </main>
   </body>
-  <script src="../js/dropdown.js"></script>
+  <script src="../js/stretch.js"></script>
+</html>
+
+
 </html>
