--- a/projects/neo.html
+++ b/projects/neo.html
@@ -19,14 +19,14 @@
 
       <div class="vertical-menu-info">
         <h1 class="stretch">find neo.</h1>
-        <h2 class="stretch">NASA Open API | Near Earth Object Web Service | JavaScript</h2>
+        <h2 class="stretch">NASA Open API // Near Earth Object Web Service // JavaScript</h2>
       </div>
     </header>
 
     <main>
       <div class="project-container">
         <h1>Find Near-Earth Objects (NEO)</h1>
-        <p>This application allows you to search for near-Earth objects on a specific day. It uses the NeoWs (<a href="https://api.nasa.gov/api.html#NeoWS" title="Page for the NeoWs API)" target="_blank">Near Earth Object Web Service</a>) to access the data about all near-Earth objects on the desired day. A GIF of the application can be seen below. You can try it for yourself <a href="../neo-app.html" title="The NEO application">here</a>.</p>
+        <p>This application allows you to search for near-Earth objects on a specific day. It uses the NeoWs (<a href="https://api.nasa.gov/api.html#NeoWS" title="Page for the NeoWs API)" target="_blank">Near Earth Object Web Service</a>) to access the data about all near-Earth objects on the desired day. A GIF of the application can be seen below. You can try it for yourself <a href="../neo-app.html" target="_blank" title="The NEO application">here</a>.</p>
         <img class="project-media" src="../images/neo/neo-action.gif" alt="The app being used" title="NEO app being used.">
       </div>
     </main>
