--- a/projects/virtual-fixtures.html
+++ b/projects/virtual-fixtures.html
@@ -19,7 +19,7 @@
 
       <div class="vertical-menu-info">
         <h1 class="stretch">virtual fixtures.</h1>
-        <h2 class="stretch">roguelike cave exploration game | Java</h2>
+        <h2 class="stretch">roguelike cave exploration game // Java</h2>
       </div>
     </header>
 
